--- a/oc-organisations-fraud-api.html
+++ b/oc-organisations-fraud-api.html
@@ -1,4 +1,6 @@
 <link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../iron-ajax/iron-ajax.html">
+<link rel="import" href="../oc-core-utils/oc-api-provider-behaviour.html">
 
 <!--
 `oc-organisations-fraud-api`
@@ -8,25 +10,33 @@ Element to consume Ordercloud fraud API
 -->
 
 <dom-module id="oc-organisations-fraud-api">
+
   <template>
-    <style>
-      :host {
-        display: block;
-      }
-    </style>
-    <h2>Hello [[prop1]]</h2>
+    <iron-ajax id="getAgentFraudList"></iron-ajax>
   </template>
 
   <script>
     Polymer({
 
       is: 'oc-organisations-fraud-api',
+      behaviors: [OC.Behaviours.ApiProvider],
 
-      properties: {
-        prop1: {
-          type: String,
-          value: 'oc-organisations-fraud-api',
-        },
+      /**
+       * Returns all the fraud by delivery agent
+       *
+       * @param {Number} agentId
+       * @param {Number} page
+       * @param {Number} pageSize
+       *
+       * @return {Promise}
+       */
+      getAgentFraudList: function(agentId, page, pageSize) {
+        this.$.getAgentFraudList.url = this._url('organisations/fraud/deliveryagent/' + agentId);
+        this.$.getAgentFraudList.params = {
+          page: page || 1,
+          pagesize: pageSize || 20
+        };
+        return this._generateRequest(this.$.getAgentFraudList);
       },
 
     });
